force-app/main/default/objects/Asset/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings2</relationshipName>
    <type>Lookup</type>
</CustomField>