force-app/main/default/objects/Asset/fields/EnterpriseName__c.field-meta.xml
<CustomField>
    <fullName>EnterpriseName__c</fullName>
    <label>Enterprise Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>DM Projects</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>