force-app/main/default/objects/Asset/fields/General_Manager__c.field-meta.xml
<CustomField>
    <fullName>General_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>