force-app/main/default/objects/Asset/fields/Relationship_Officer_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Officer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship Officer Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>