force-app/main/default/objects/Asset/fields/Sales_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Sales_Person_Name__c</fullName>
    <label>Sales Person Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>