force-app/main/default/objects/Asset/fields/UnitType__c.field-meta.xml
<CustomField>
    <fullName>UnitType__c</fullName>
    <label>Unit Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>