force-app/main/default/objects/Asset/listViews/AllAssets.listView-meta.xml
<ListView>
    <fullName>AllAssets</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Unit__c</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>Relationship_Officer_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Bookings</label>
</ListView>